# gradual-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gradual/: __init__.py  _client.py  _evaluator.py  _event_buffer.py  _hash.py  _types.py
tests/: conftest.py  test_evaluator.py  test_hash.py  test_integration.py
