[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradual-sdk"
version = "0.1.0"
description = "Gradual feature flag SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Elijah Nikolov", email = "eli@gradual.so" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gradual"]

[tool.pytest.ini_options]
testpaths = ["tests"]
